fix type in getAdmissions